--- a/weeks/week-6.qmd
+++ b/weeks/week-6.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Weeks 4-5"
-subtitle: "Pandas/Dask"
+title: "Weeks 6"
+subtitle: "Spark SQL/RDD"
 editor: source
 draft: false
 ---
@@ -8,8 +8,10 @@ draft: false
 
 ::: callout-important
 
-- {{< fa circle-exclamation >}} 1 session during Week 4/**0 session during Week 5**
--   Friday 4 February 2025 Sophie Germain 0014 15h45-17h45
+**2 Sessions**
+
+-   Thursday 20 February 2025 Olympes de Gouges 358  **10h45-12h45** 
+-   Friday 21 February 2025 Sophie Germain 0014 15h45-17h45
 -   {{< fa cal >}} [Calendar](https://edt.math.univ-paris-diderot.fr/#/parcours/mathinfo/m1)
 
 :::
@@ -17,11 +19,12 @@ draft: false
 
 ## Lecture : slides
 
-- {{< fa display >}} [Spark low level APIs: RDD](/core/slides/slides03_sparkrdd.html){target="_blank"} 
-<!-- - {{< fa display >}} [Spark high level APIs: SQL](/core/slides/slides04_sparkl.html){target="_blank"}
- -->
+
+- {{< fa display >}} [Spark high level APIs: SQL](/core/slides/slides04_sparkl.html){target="_blank"}
+
 We may come back to several parts of 
 
+- {{< fa display >}} [Spark low level APIs: RDD](/core/slides/slides03_sparkrdd.html){target="_blank"} 
 - {{< fa display >}} [Python Data Science Stack](/core/slides/slides02_python_ds_stack.html){target="_blank"} 
 - {{< fa display >}} [Dask](/core/slides/slides09_dask.html){target="_blank"}
 
@@ -30,10 +33,11 @@ We may come back to several parts of
 
 We shall spend most of the lectures on 
 
-- {{< fa brands python >}} <a href="https://s-v-b.github.io/IFEBY310/core/ipynb/notebook05_sparkrdd.ipynb" download>Jupyter notebook V : Spark RDD</a> 
-- {{< fa globe >}} [html: Spark RDD](/core/notebooks/notebook05_sparkrdd.html)  
-<!-- - {{< fa brands python >}} <a href="https://s-v-b.github.io/IFEBY310/core/ipynb/notebook06_sparksql.ipynb" download>Jupyter notebook VI : Spark SQL</a> 
-- {{< fa globe >}} [html: Spark SQL](/core/notebooks/notebook06_sparksql.html)   -->
+- {{< fa brands python >}} <a href="https://s-v-b.github.io/IFEBY310/core/ipynb/notebook06_sparksql.ipynb" download>Jupyter notebook VI : Spark SQL</a> 
+- {{< fa globe >}} [html: Spark SQL](/core/notebooks/notebook06_sparksql.html)  
+- {{< fa brands python >}} <a href="https://s-v-b.github.io/IFEBY310/core/ipynb/notebook07_json-format.ipynb" download>Jupyter notebook VII : JSON</a> 
+- {{< fa globe >}} [html: JSON](/core/notebooks/notebook07_json-format.html)  
+
 
 
 and possibly compare with:  
@@ -44,6 +48,8 @@ and possibly compare with:
 
 You shall have gone through (on your own)
 
+- {{< fa brands python >}} <a href="https://s-v-b.github.io/IFEBY310/core/ipynb/notebook05_sparkrdd.ipynb" download>Jupyter notebook V : Spark RDD</a> 
+- {{< fa globe >}} [html: Spark RDD](/core/notebooks/notebook05_sparkrdd.html)  
 - {{< fa brands python >}} <a href="https://s-v-b.github.io/IFEBY310/core/ipynb/notebook01_python.ipynb" download>Jupyter notebook I : tour of Python</a> 
 - {{< fa globe >}} [html: tour of Python](/core/notebooks/notebook01_python.html)  
 - {{< fa brands python >}} <a href="https://s-v-b.github.io/IFEBY310/core/ipynb/notebook02_numpy.ipynb" download>Jupyter notebook II : tour of numpy</a>
