modified:   .gitignore 	new file:   _freeze/core/ipynb/notebook07_json-format/execute-results/ipynb.json 	modified:   core/notebooks/notebookxx_pg_pandas_spark.qmd 	modified:   core/slides/slides06_arrow.qmd 	modified:   core/slides/slides06_file-formats.qmd 	modified:   core/slides/slides07_spark-deeper-dive.qmd 	modified:   core/slides/slides08_spark-tips.qmd 	modified:   core/slides/spark-catalyst.qmd 	modified:   quarto-format.qmd

--- a/core/slides/slides06_arrow.qmd
+++ b/core/slides/slides06_arrow.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Apache Arrow"
 date: "2024-02-19"
-engine: knitr
+engine: jupyter
 ---
 
 #  Apache Arrow  {background-color="#1c191c"}
@@ -80,7 +80,7 @@ Uses {{< fa brands google >}} Flatbuffers
 
 # Python `pyarrow` module  {background-color="#1c191c"}
  
-##
+##  Importing `pyarrow`
 
 ```{python}
 import pyarrow as pa
@@ -116,7 +116,7 @@ df_new = table.to_pandas()
 schema = pa.Schema.from_pandas(df)
 ```
 
-::: {.notes}
+::: {.aside}
 
 - [Arrow doc](https://arrow.apache.org/docs/python/pandas.html)
 - [Pandas doc]()
